# lotus-regression

./: .buildinfo  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  Technical Note.html  api_predictors.html  api_reference.html  api_regression.html  build_deploy.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: main.yml
LOTUS_regression/: _version.py  regression.py
LOTUS_regression/dataset/: sbuv.py
LOTUS_regression/plotting/: __init__.py  trends.py
LOTUS_regression/predictors/: __init__.py  seasonal.py
LOTUS_regression/tests/: __init__.py  test_regression.py
_modules/: index.html
_modules/LOTUS_regression/: regression.html
_sources/: index.rst.txt
_sources/examples/: Changing the Linear Components.ipynb.txt  Predictors.ipynb.txt  SBUV Trends.ipynb.txt
ci/: requirements-py27.yml  requirements-py310.yml  requirements-py311.yml  requirements-py312.yml  requirements-py33.yml  requirements-py34.yml  requirements-py35.yml  requirements-py36.yml  requirements-py38.yml  requirements-py39.yml
dev/: .buildinfo  Technical Note.html  api_predictors.html  api_reference.html  api_regression.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/_modules/: index.html
dev/_sources/: index.rst.txt
dev/_static/: documentation_options.js
dev/examples/: Changing the Linear Components.html  Changing the Linear Components.ipynb  GOZCARDS Trends Seasonal.html  GOZCARDS Trends Seasonal.ipynb  GOZCARDS Trends.html  GOZCARDS Trends.ipynb  Predictors.html  Predictors.ipynb  SBUV Trends.html  SBUV Trends.ipynb  Sage II-OSIRIS-OMPS-LP Trends.html  Sage II-OSIRIS-OMPS-LP Trends.ipynb  SingleBin.html  SingleBin.ipynb
docs/: Makefile  environment.yml  make.bat  make_regression_images.py
docs/source/: Technical Note.ipynb  api_predictors.rst  api_reference.rst  api_regression.rst  conf.py  index.rst  quickstart.rst
examples/: Changing the Linear Components.html  Changing the Linear Components.ipynb  GOZCARDS Trends Seasonal.html  GOZCARDS Trends Seasonal.ipynb  GOZCARDS Trends.html  GOZCARDS Trends.ipynb  Predictors.html  Predictors.ipynb  SBUV Trends.html  SBUV Trends.ipynb  Sage II-OSIRIS-OMPS-LP Trends.html  Sage II-OSIRIS-OMPS-LP Trends.ipynb  SingleBin.html  SingleBin.ipynb
src/LOTUS_regression/: regression.py
test_data/: EESC.txt
test_data/SBUV_NOAA/: format_readme.txt  (+1 more)
(+80 files in other folders)
